Swap to Astro assets

--- a/astro/src/components/CodeWrapper.astro
+++ b/astro/src/components/CodeWrapper.astro
@@ -62,12 +62,7 @@ const showExpandButton = !expanded && expandable
       'not-prose',
       'astro-code',
       showExpandButton && [
-        [
-          'line-clamp-10',
-          'rounded-b-none',
-          '!overflow-x-scroll',
-          '[&>*]:inline',
-        ],
+        ['line-clamp-10', 'rounded-b-none', '!overflow-x-scroll'],
         [
           'peer-checked:line-clamp-none',
           'peer-checked:rounded-b-xl',
