Get Tweet embeds working again
Thanks Elon, you dick

--- a/astro/src/components/Post/components.astro
+++ b/astro/src/components/Post/components.astro
@@ -1,12 +1,11 @@
 ---
-// @ts-ignore
-import { Tweet } from '@astro-community/astro-embed-twitter'
 import DemoVideo from './DemoVideo.astro'
 import GithubFile from './GithubFile.astro'
 import Image from './Image.astro'
 import ResponsiveIFrame from './ResponsiveIFrame.astro'
 import StreamingAlbum from './StreamingAlbum.astro'
 import Code from './Code.astro'
+import Tweet from './Tweet.astro'
 
 export const components = {
   DemoVideo,
