Just gonna have to ignore linting issues

--- a/astro/src/components/Memoji.astro
+++ b/astro/src/components/Memoji.astro
@@ -1,5 +1,5 @@
 ---
-import { Image, getImage } from 'astro:assets'
+import { Image } from 'astro:assets'
 import clouds from '../assets/img/memoji/clouds.png'
 import coding from '../assets/img/memoji/coding.png'
 import dazed from '../assets/img/memoji/dazed.png'
