Update some resume points

--- a/src/components/FancyBackground/index.astro
+++ b/src/components/FancyBackground/index.astro
@@ -34,11 +34,11 @@ const { points = 30 } = Astro.props
       'right-4',
       'bottom-4',
       'normal-case',
-      'print:hidden',
       'inline-flex',
       'hidden',
       'sm:flex',
       'cursor-pointer',
+      'print:!hidden',
     ]}
     aria-label="Regenerate the background pattern"
     data-tip="Regenerate the background pattern"
