--- a/src/components/Resume/Footer.astro
+++ b/src/components/Resume/Footer.astro
@@ -9,13 +9,14 @@ import EmojiText from '../EmojiText.astro'
     'fixed',
     'w-full',
     'font-sans',
-    'font-bold',
+    ['font-bold', '[&_.emoji]:font-normal'],
     'text-xs',
     'bottom-0',
     'gap-6',
     '[&_a]:link-primary',
     ['border-t-2', 'border-t-accent'],
     'pt-2',
+    '[&_.emoji]:mt-1',
   ]}
 >
   <span>
