--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -61,7 +61,7 @@ const education = experiences.filter(
       <h1 class="text-lg mb-0">Eli Gundry</h1>
       <h2 class="text-sm mt-0 !font-mono self-center">
         <span class="text-primary">Full Stack Web Engineer</span>
-        <span class="comment"> // ❤️ JavaScript, APIs && Web Standards</span>
+        <span class="comment"> // <span class="font-normal">❤️</span>JavaScript, APIs && Web Standards</span>
       </h2>
     </header>
     <Section>
