fix: update imports to get the site rendering

--- a/src/components/GithubCalendar.astro
+++ b/src/components/GithubCalendar.astro
@@ -2,7 +2,7 @@
 // This code is adapted from  https://github.com/grubersjoe/react-activity-calendar
 // I wanted to be able to do the data fetching server side and just serve an
 // inline svg in the HTML.
-import dateFns from 'date-fns'
+import * as dateFns from 'date-fns'
 import groupBy from 'lodash/groupBy'
 import config from '../config'
 import { cacheAxios } from '../lib/cache'
