--- a/src/components/Resume/Experience.astro
+++ b/src/components/Resume/Experience.astro
@@ -1,5 +1,5 @@
 ---
-import dateFns from 'date-fns'
+import * as dateFns from 'date-fns'
 import type { CollectionEntry } from 'astro:content'
 
 export interface Props {
