--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -1,6 +1,6 @@
 ---
 import type { CollectionEntry } from 'astro:content'
-import dateFns from 'date-fns'
+import * as dateFns from 'date-fns'
 import BaseLayout from './Layout.astro'
 import EmojiText from '../components/EmojiText.astro'
 
