--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content'
-import dateFns from 'date-fns'
+import * as dateFns from 'date-fns'
 import kebabCase from 'lodash/kebabCase'
 import Layout from '../layouts/Layout.astro'
 import PostPreview from '../components/Post/Preview.astro'
