--- a/src/pages/feelings.astro
+++ b/src/pages/feelings.astro
@@ -1,5 +1,5 @@
 ---
-import dateFns from 'date-fns'
+import * as dateFns from 'date-fns'
 import daylio from '../lib/daylio'
 import Layout from '../layouts/Layout.astro'
 import DaylioEntry from '../components/DaylioEntry.astro'
