--- a/src/components/Post/Preview.astro
+++ b/src/components/Post/Preview.astro
@@ -1,6 +1,6 @@
 ---
 import type { CollectionEntry } from 'astro:content'
-import dateFns from 'date-fns'
+import * as dateFns from 'date-fns'
 import EmojiText from '../EmojiText.astro'
 import Excerpt from './Excerpt.astro'
 
