--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,7 @@ import Memoji from '../components/Memoji.astro'
 
 const [
   latestEntry,
+  chartData,
   topAlbums,
   currentlyReading,
   recentlyRead,
@@ -23,7 +24,8 @@ const [
   latestPost,
   CodingSection,
 ] = await Promise.all([
-  daylio.getLatest(),
+  getCollection('feelings').then((entries) => entries[0].data),
+  getCollection('feelings').then((entries) => entries.slice(0, 30).map(({ data }) => ({ x: data.slug, y: data.score }))),
   lastfm
     .getTopAlbumsCover(config.lastFmUsername)
     .then((albums) => albums.slice(0, 9)),
@@ -52,6 +54,8 @@ const [
     .then((section) => section.render())
     .then(({ Content }) => Content),
 ])
+
+console.log({latestEntry,})
 ---
 
 <Layout>
