--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import { SEO } from 'astro-seo'
 import { markdownToTxt } from 'markdown-to-txt'
-import { CollectionEntry, getEntryBySlug } from 'astro:content'
+import { type CollectionEntry, getEntry } from 'astro:content'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import FancyBackground from '../components/FancyBackground/index.astro'
@@ -10,6 +10,7 @@ import daylio from '../lib/daylio'
 import config from '../config'
 import { getLastModifiedForPath } from '../lib/lastModified'
 import '../styles/tailwind.css'
+import { getCollection } from 'astro:content'
 
 export interface Props {
   title?: string
@@ -25,9 +26,9 @@ export interface Props {
 }
 
 const [latestFeeling, modified, about] = await Promise.all([
-  daylio.getLatest(),
+  getCollection('feelings').then(c => c[0].data),
   getLastModifiedForPath(Astro.url.pathname),
-  getEntryBySlug('sections', 'about').then((section) =>
+  getEntry('sections', 'about')?.then((section) =>
     markdownToTxt(section.body).split('\n').slice(2).join(' ')
   ),
 ])
