--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -108,6 +108,7 @@ if (opengraphImage === config.url) {
     />
     <meta itemprop="name" content="Eli Gundry" />
     <meta itemprop="description" content={about} />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Fira+Code&family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=fallback" />
     <Tracking />
     <script is:inline>
       if (localStorage.getItem('theme') === null) {
