--- a/src/components/Tracking.astro
+++ b/src/components/Tracking.astro
@@ -1,4 +1,4 @@
-<script type="text/partytown">
+<script is:inline type="text/partytown">
   ;(function (w, d, s, l, i) {
     w[l] = w[l] || []
     w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
