--- a/src/components/Post/GithubFile.astro
+++ b/src/components/Post/GithubFile.astro
@@ -1,5 +1,5 @@
 ---
-import {Code} from 'astro:components'
+import { Code } from 'astro:components'
 import path from 'node:path'
 import axios from 'axios'
 import { FaGithub } from 'react-icons/fa'
@@ -46,7 +46,7 @@ if (rawURL.hash) {
 }
 
 const extension = filePath.at(-1)
-  ? (path.extname(filePath.at(-1) as string).slice(1))
+  ? path.extname(filePath.at(-1) as string).slice(1)
   : undefined
 
 let file = await axios
