--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ export interface Props {
 }
 
 const [latestFeeling, modified, about] = await Promise.all([
-  getCollection('feelings').then(c => c[0].data),
+  getCollection('feelings').then((c) => c[0].data),
   getLastModifiedForPath(Astro.url.pathname),
   getEntry('sections', 'about')?.then((section) =>
     markdownToTxt(section.body).split('\n').slice(2).join(' ')
@@ -50,7 +50,7 @@ if (opengraphImage === config.url) {
 }
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html
   lang="en"
   itemscope
@@ -108,7 +108,10 @@ if (opengraphImage === config.url) {
     />
     <meta itemprop="name" content="Eli Gundry" />
     <meta itemprop="description" content={about} />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Fira+Code&family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=fallback" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Fira+Code&family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=fallback"
+    />
     <Tracking />
     <script is:inline>
       if (localStorage.getItem('theme') === null) {
