--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -91,7 +91,7 @@ const tagsCss = tags
       strict about that.
     </p>
     <h6>Filter by tag</h6>
-    <div class="tag-filter btn-group">
+    <div class="tag-filter join">
       {
         tags.map((tag) => (
           <a
@@ -101,6 +101,7 @@ const tagsCss = tags
               'btn-primary',
               'btn-xs',
               'sm:btn-md',
+              'join-item',
               'normal-case',
               `tag-${tag}`,
             ]}
@@ -116,6 +117,7 @@ const tagsCss = tags
           'btn-primary',
           'btn-xs',
           'sm:btn-md',
+          'join-item',
           'lowercase',
           'reset',
         ]}
