fix: handle some markdown breakages

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -67,8 +67,7 @@ const education = experiences.filter(
       <h2 class="text-sm mt-0 !font-mono self-center">
         <span class="text-primary">Full Stack Web Engineer</span>
         <span class="comment">
-          // <span class="font-normal">❤️</span> Typescript, AI and everything in
-          between</span
+          // <span class="font-normal">❤️</span> Typescript, AI and everything inbetween</span
         >
       </h2>
     </header>
