--- a/public/html-energy/2k25.css
+++ b/public/html-energy/2k25.css
@@ -1,3 +1,29 @@
+body {
+  padding: 0;
+  margin: 0;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+}
+
+main > * {
+  width: 50%;
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.poem {
+  font-size: 2rem;
+}
+
+.poem h1 {
+  margin-bottom: 0;
+}
+
 .next-page {
   z-index: 1000;
   width: 100%;
@@ -5,4 +31,19 @@
   display: block;
   position: absolute;
   top: 0;
+  padding-left: 1rem;
+  padding-top: 0.5rem;
+}
+
+.sql {
+  font-family: monospace;
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
+  font-weight: 400;
+  font-size: 3rem;
+}
+
+#random-wiki {
+  border-left: 1px solid black;
+  height: 100vh;
 }
